Fix scalar spinners on Firefox. Add some margin.

--- a/web/app/styles/value.css
+++ b/web/app/styles/value.css
@@ -6,12 +6,18 @@
   text-decoration: underline;
 }
 
+/* Shared spinner class. */
 .spinner {
   animation: spinner 0.5s infinite linear;
+  display: inline-block;
 }
 @keyframes spinner {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+/* Scalar value spinner. */
+.value.spinner {
+  margin: 0 10px;
 }
 
 .value-error {
